adding rev slider and shortcakes plugins for x

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,14 @@
     {
       "type": "vcs",
       "url": "../themeforest/cornerstone"
+    },
+    {
+      "type": "vcs",
+      "url": "../themeforest/x-shortcodes"
+    },
+    {
+      "type": "vcs",
+      "url": "../themeforest/revslider"
     }
   ],
   "require": {
@@ -41,7 +49,9 @@
     "johnpbloch/wordpress" : ">=4.2 <4.3",
     "wpackagist-plugin/jonradio-multiple-themes": ">=7.1 <7.2",
     "trick-e/x-theme": "^4.0",
-    "trick-e/cornerstone": "^1.0"
+    "trick-e/cornerstone": "^1.0",
+    "trick-e/revslider": "^4.6",
+    "trick-e/x-shortcodes": "^3.0"
   },
   "extra"       : {
     "wordpress-install-dir": "wp"
