--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,10 @@
     {
       "type": "vcs",
       "url": "../themeforest/revslider"
+    },
+    {
+      "type": "vcs",
+      "url": "../duplicator"
     }
   ],
   "require": {
@@ -51,7 +55,8 @@
     "trick-e/x-theme": "^4.0",
     "trick-e/cornerstone": "^1.0",
     "trick-e/revslider": "^4.6",
-    "trick-e/x-shortcodes": "^3.0"
+    "trick-e/x-shortcodes": "^3.0",
+    "trick-e/duplicator": "^0.5.24"
   },
   "extra"       : {
     "wordpress-install-dir": "wp"
