--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
     "trick-e/x-theme": "^4.0",
     "trick-e/cornerstone": "^1.0",
     "trick-e/revslider": "^4.6",
-    "trick-e/duplicator": "^0.5.24"
+    "trick-e/duplicator": "^0.5.24",
+    "wpackagist-plugin/woocommerce": "^2.4"
   },
   "extra"       : {
     "wordpress-install-dir": "wp"
