its all good with Tevolution now

--- a/composer.json
+++ b/composer.json
@@ -90,9 +90,9 @@
     "johnpbloch/wordpress": "^4.3",
     "trick-e/supreme": "^1.1",
     "trick-e/tevolution-bulkimport-plugin": "^1.0",
-    "trick-e/tevolution": "^2.2",
     "trick-e/tevolution-directory": "^2.0",
-    "trick-e/tevolution-locationmanager": "^2.0"
+    "trick-e/tevolution-locationmanager": "^2.0",
+    "trick-e/Tevolution": "2.2.11.2"
   },
   "extra"       : {
     "wordpress-install-dir": "wp"
