--- a/wp-content/plugins/Tevolution/composer.json
+++ b/wp-content/plugins/Tevolution/composer.json
@@ -2,7 +2,7 @@
   "name": "trick-e/Tevolution",
   "description": "Tevolution Wordpress Plugin for Directory, by Templatic.",
   "license": "proprietary",
-  "keywords": ["wordpress","plugin","plugins","tevolution", "tevolution-plugin","directory-theme", "templatic"],
+  "keywords": ["wordpress","plugin","plugins","Tevolution", "tevolution-plugin","directory-theme", "templatic"],
   "authors": [
     {
       "name": "Christopher Legan",
