--- a/.htaccess
+++ b/.htaccess
@@ -9,6 +9,6 @@ RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^ - [L]
 RewriteRule ^(wp-(admin|includes|snapshots).*) wp/$1 [L]
 RewriteRule ^(.*\.php)$ wp/$1 [L]
-RewriteRule . /index.php [L]
+RewriteRule . index.php [L]
 </IfModule>
 # END WordPress
